@@ -7,6 +7,10 @@ Changes in administration of the server
     * It is possible to block account names from being registered and
       to enforce minimum and maximum lengths of the username on
       registration of new accounts
+    * New base handler base_dir that can periodically check a directory for
+      *.stanza files. These files are read, parsed, the content is
+      processed as a stanza, and the file is deleted afterwards. This can
+      be useful to inject messages and other stanzas to the server.
 
 Changes in features visible to the user
     * Support for Flexible Offline Message Retrieval (JEP-0013)
